2007-07-01  Eitan Isaacson  <eitan@ascender.com>

	* plugins/api_view.py: Catch AttributeError on slots.
	* src/lib/accerciser/pyatspi.zip: Updated to revisio 935.

2007-07-01  Eitan Isaacson  <eitan@ascender.com>

	* accerciser.schemas.in: Changed caps on view names.
	* help/C/accerciser.xml: Updated documentation.
	* help/C/figures/accerciser.png: Updated screenshot.
	* help/C/figures/api_browser.png: Updated screenshot.
	* help/C/figures/event_monitor.png: Updated screenshot.
	* help/C/figures/interface_viewer.png: Updated screenshot.
	* help/C/figures/script_recorder.png: Updated screenshot.
	* help/Makefile.am: Added script_recorder.png.
	* src/lib/accerciser/plugin/view.py: Added mnemonic to single 
	view mode.

2007-06-29  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/accerciser.py: Changed to new UI Manager scheme.
	* src/lib/accerciser/bookmarks.py: Changed to new UI Manager scheme.
	* src/lib/accerciser/main_window.py: Removed UI manager stuff.
	* src/lib/accerciser/node.py: Check if no application accessible
	was found.
	* src/lib/accerciser/plugin/view.py: Renamed ViewManager to 
	MultiViewModel with a ViewModel superclass. This allows more then
	one kind of view management scheme, like SingleViewModel.
	* src/lib/accerciser/tools.py: Added Proxy class
	for wrapping weak referenced callables.
	* src/lib/accerciser/ui_manager.py: Added. 
	Creates a singleton UIManager.
	* src/lib/accerciser/Makefile.am: Added ui_manager.py.

2007-06-19  Eitan Isaacson  <eitan@ascender.com>

	* plugins/Makefile.am: Added quick select plugin.
	* plugins/quick_select.py:  Added quick select plugin.
	* src/lib/accerciser/accerciser.py: Removed quick select
	functionality, and put it in a seperate plugin.
	* src/lib/accerciser/plugin/plugin_manager.py: Made changes to
	allow plugins that have no visible widget.
	* src/lib/accerciser/plugin/view.py: Made changes to
	allow plugins that have no visible widget.

	* README: Bumped to 0.1.5.