@@ -1,3 +1,10 @@
+2007-07-05  Eitan Isaacson  <eitan@ascender.com>
+
+	* plugins/interface_view.py: Handle exception from a non-existant
+	selection interface.
+	* src/lib/accerciser/main_window.py: Fixed exception raised in bug 
+	453330.
+
 2007-07-01  Eitan Isaacson  <eitan@ascender.com>
 
 	* plugins/api_view.py: Catch AttributeError on slots.
